--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,8 @@ service.name=BigCashMTN
 
 client_id=ZShd6BjnAGLQguM5JvfSGG7CAVzpmnAh
 client_secret=2NSzkE9Nao1wQzez
+
+
+daily= Daily Subscription 2 ZMW.
+weekly= Weekly Subscription 5 ZMW.
+monthly= Monthly Subscription 15 ZMW.
