--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,10 @@
 			<artifactId>json</artifactId>
 			<version>20231013</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
 
 	</dependencies>
 
